Some alignments fixes for the header pattern.

--- a/taina/assets/scss/blocks/navigation.scss
+++ b/taina/assets/scss/blocks/navigation.scss
@@ -66,7 +66,7 @@
     .taina-navigation-mobile-label {
         z-index: 1;
         position: absolute;
-        margin: 0.25em 0.75em;
+        margin: 0.25em calc(1.55em + 0.75em) 0.25em 0.75em;
         font-size: 1.75em;
         text-transform: uppercase;
         color: var(--wp--preset--color--background);
@@ -106,7 +106,7 @@
     margin-right: 0.75em;
 }
 @media (max-width: 599px) {
-    .wp-block-group.is-style-taina-group-align-items_stretch>.wp-block-navigation {
+    .wp-block-group.is-style-taina-group-align-items_stretch>.wp-block-navigation:not(:last-child) {
         margin-right: 0.75em;
     }
 }
